2007-08-06  Federico Mena Quintero  <federico@novell.com>

	* data/icons/*: New, sexy icon files from Alberto Ruiz
	<aruiz@gnome.org> and Andreas Nilsson <andreas@andreasn.se>.

	* configure.ac (AC_CONFIG_FILES): Add the data/icons Makefiles.

	* Makefile.am (SUBDIRS): Add the "data" directory.

	* admin-tool/Makefile.am: Remove the icon installation stuff.

	* admin-tool/sabayon.png: Removed the old icon.  Wheeeee!

==================== 2.19.1 ====================

2007-07-12  Federico Mena Quintero  <federico@novell.com>

	Released sabayon-2.19.1.

	* configure.ac: Bumped version number to 2.19.1.

	* NEWS: Updated NEWS.

2006-03-24  Michael Meeks  <michael.meeks@novell.com>

	Add support for OpenOffice.org lockdown.

	* lib/sources/gconfsource.py: add int/string bits.
	
	* admin-tool/lockdownappliersabayon.py: add support
	for string & int types & re-factor a little.

	pessulus: yes I know I shouldn't commit here, but it's
	          a branch & I want a simple diff.
	
	* admin-tool/lockdown/maindialog.py: add combo
	settings, and OO.o key path / name / vbox tuples

	* admin-tool/lockdown/lockdowncombo.py: impl. new
	combo lock-down setup.
	
	* admin-tool/lockdown/pessulus.glade: add OO.o widgets

2007-07-12  Federico Mena Quintero  <federico@novell.com>

	* admin-tool/lockdown/disabledapplets.py
	(PessulusDisabledApplets.__fill_liststore): Workaround for
	https://bugzilla.novell.com/show_bug.cgi?id=256938 --- applets
	which don't have translated .server files (from bonobo-activation)
	will cause the "disabled applets" part of the lockdown dialog to
	fail.  If there is no trnslation, just use the applet's IID.

2007-07-11  Federico Mena Quintero  <federico@novell.com>

	Patch from https://bugzilla.novell.com/show_bug.cgi?id=176830

	* lib/userdb.py (UserDatabase.get_users): Ignore usernames that
	end in "$" - these are Active Directory hosts, and we should not
	display them.

2007-07-11  Federico Mena Quintero  <federico@novell.com>
